# anki-app

./: Cargo.toml  render.yaml
migrations/: 20260630235250_create_decks_and_cards.sql  20260702000001_add_srs_fields.sql
src/: main.rs
static/: index.html
